kubernetes/ingress/testIngress/2.app-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  rules:
  - host: biggic.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
