kubernetes/ingress/testIngress/3.app-test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  tls:
    - hosts:
      - biggic.com
      secretName: biggic-testssl
  rules:
  - host: biggic.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
